--- a/src/css/Login.scss
+++ b/src/css/Login.scss
@@ -1,9 +1,7 @@
 .containerPrincipal {
-    position:0 auto!;
-    transform: translate(-50, -50);
-    border: 1px whitesmoke blue;
-    padding: 1em;
-    background-color: white;
+margin-top: 10em;    
+position:0 auto;
+padding: 1em;
 }
 
 .containerSecundario{
