--- a/src/css/Menu.scss
+++ b/src/css/Menu.scss
@@ -1,2 +1,3 @@
-$sidebar-bg-color: #800080;
+$sidebar-bg-color: #307DA5;
+$sidebar-color: #FFFFFF !default;
 @import '~react-pro-sidebar/dist/scss/styles.scss';
