--- a/src/css/Menu.scss
+++ b/src/css/Menu.scss
@@ -1,3 +1,12 @@
 $sidebar-bg-color: #307DA5;
 $sidebar-color: #FFFFFF !default;
 @import '~react-pro-sidebar/dist/scss/styles.scss';
+
+.avatar {
+    width: 60%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border: 2px solid gray;
+    border-radius: 50%;
+}
